--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 header{
-	background-image:linear-gradient(rgba(0,0,0,0.5),(0,0,0,0.5), url(../1.jpg);
+	background-image:linear-gradient(rgba(0,0,0,0.5),(0,0,0,0.5), url(../abc.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
