--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ body {
  /* end of first page */
  /*  start of media file */
  @media screen and (min-width:300px) and (max-width:480px){
+   body{
+      background-color:red;
+   }
  .welcome_text {
   width: 200px;
 }
